--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/* p, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+} */
 
 #playground {
   width: 100%;
