--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html, body {margin: 0; height: 100%; overflow: hidden}
+
 #playground {
   width: 100%;
   height: 100vh;
