--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 html, body {margin: 0; height: 100%; overflow: hidden}
 
+#github-link:hover {transform: scale(1.5);}
+
 #playground {
   width: 100%;
   height: 100vh;
