--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,20 @@ body {
 
 #github-link:hover {transform: scale(1.1);}
 
+.controls {
+  height: 20px;
+  font-size: 12px;
+  margin: 6px 8px 10px;
+  border: none;
+  background-color: transparent;
+  border-radius: 15px;
+}
+
+.controls:hover {
+  cursor: pointer;
+  outline: 1px solid grey;
+}
+
 #playground {
   width: 100%;
   height: 100vh;
