dark theme in the house

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ body {
   overflow: hidden;
 }
 
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 .controls {
   height: 20px;
   font-size: 12px;
